--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
@@ -25,7 +25,10 @@
   <code>using namespace std;</code>
 
   <p>Определяем короткие названия типам</p>
-  <code>typedef long long ll;</code>
+<pre>
+typedef long long ll;
+typedef long double ld;
+</pre>
 
   <p>Ускорение ввода-вывода. Отключаем синхронизацию с C-потоками и отвязываем cin/cout для ускорения работы.</p>
 <pre>
