--- a/src/components/alg/alg-pract/codeforces/pages/elem-241205-Round991.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241205-Round991.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2050" target="_blank">Codeforces Round 991 (Div.3) 2024-12-05</a>
+  <a href="https://codeforces.com/contest/2050" target="_blank">Codeforces 2050 Round 991 (Div.3) 2024-12-05</a>
 </article>
 
 
