--- a/src/components/alg/alg-pract/codeforces/pages/elem-241215-Round993.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241215-Round993.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2044" target="_blank">Codeforces Round 993 (Div.4) 2024-12-15</a>
+  <a href="https://codeforces.com/contest/2044" target="_blank">Codeforces 2044 Round 993 (Div.4) 2024-12-15</a>
 </article>
 
 
