--- a/src/components/alg/alg-pract/codeforces/pages/elem-241222-Round995.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241222-Round995.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2051" target="_blank">Codeforces Round 995 (Div.3) 2024-12-22</a>
+  <a href="https://codeforces.com/contest/2051" target="_blank">Codeforces 2051 Round 995 (Div.3) 2024-12-22</a>
 </article>
 
 
