--- a/src/components/alg/alg-pract/codeforces/pages/elem-250119-Round998.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250119-Round998.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2060" target="_blank">Codeforces Round 998 (Div.3) 2025-01-19</a>
+  <a href="https://codeforces.com/contest/2060" target="_blank">Codeforces 2060 Round 998 (Div.3) 2025-01-19</a>
 </article>
 
 
