--- a/src/components/alg/alg-pract/codeforces/pages/elem-250225-Round1006.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250225-Round1006.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2072" target="_blank">Codeforces Round 1006 (Div.3) 2025-02-25</a>
+  <a href="https://codeforces.com/contest/2072" target="_blank">Codeforces 2072 Round 1006 (Div.3) 2025-02-25</a>
 </article>
 
 
