--- a/src/components/alg/alg-pract/codeforces/pages/elem-250325-Round1013.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250325-Round1013.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2091" target="_blank">Codeforces Round 1013 (Div.3) 2025-03-25</a>
+  <a href="https://codeforces.com/contest/2091" target="_blank">Codeforces 2091 Round 1013 (Div.3) 2025-03-25</a>
 </article>
 
 
