--- a/src/components/alg/alg-pract/codeforces/pages/elem-250413-Round1017.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250413-Round1017.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2094" target="_blank">Codeforces Round 1017 (Div.4) 2025-04-13</a>
+  <a href="https://codeforces.com/contest/2094" target="_blank">Codeforces 2094 Round 1017 (Div.4) 2025-04-13</a>
 </article>
 
 
