--- a/src/components/alg/alg-pract/codeforces/pages/elem-250526-Round1027.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250526-Round1027.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2114" target="_blank">Codeforces Round 1027 (Div.3) 2025-05-26</a>
+  <a href="https://codeforces.com/contest/2114" target="_blank">Codeforces 2114 Round 1027 (Div.3) 2025-05-26</a>
 </article>
 
 
