--- a/src/components/alg/alg-pract/codeforces/pages/elem-250608-Round1029.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250608-Round1029.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2117" target="_blank">Codeforces Round 1029 (Div.3) 2025-06-08</a>
+  <a href="https://codeforces.com/contest/2117" target="_blank">Codeforces 2117 Round 1029 (Div.3) 2025-06-08</a>
 </article>
 
 
