--- a/src/components/alg/alg-pract/codeforces/pages/elem-250617-Round1032.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250617-Round1032.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2121" target="_blank">Codeforces Round 1032 (Div.3) 2025-06-17</a>
+  <a href="https://codeforces.com/contest/2121" target="_blank">Codeforces 2121 Round 1032 (Div.3) 2025-06-17</a>
 </article>
 
 
