--- a/src/components/alg/alg-pract/codeforces/pages/elem-250701-Round1034.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250701-Round1034.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2123" target="_blank">Codeforces Round 1034 (Div.3) 2025-07-01</a>
+  <a href="https://codeforces.com/contest/2123" target="_blank">Codeforces 2123 Round 1034 (Div.3) 2025-07-01</a>
 </article>
 
 
