--- a/src/components/alg/alg-pract/codeforces/pages/elem-250705-Round1035.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250705-Round1035.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2119" target="_blank">Codeforces Round 1035 (Div.2) 2025-07-05</a>
+  <a href="https://codeforces.com/contest/2119" target="_blank">Codeforces 2119 Round 1035 (Div.2) 2025-07-05</a>
 </article>
 
 
