--- a/src/components/alg/alg-pract/codeforces/pages/elem-250810-Round1042.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250810-Round1042.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2131" target="_blank">Codeforces Round 1042 (Div. 3) 2025-08-10</a>
+  <a href="https://codeforces.com/contest/2131" target="_blank">Codeforces 2131 Round 1042 (Div. 3) 2025-08-10</a>
 </article>
 
 
