--- a/src/components/alg/alg-pract/codeforces/pages/elem-250821-Round1043.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250821-Round1043.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2132" target="_blank">Codeforces Round 1043 (Div. 3) 2025-08-21</a>
+  <a href="https://codeforces.com/contest/2132" target="_blank">Codeforces 2132 Round 1043 (Div. 3) 2025-08-21</a>
 </article>
 
 
