--- a/src/components/alg/alg-pract/codeforces/pages/elem-250826-Round1045.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250826-Round1045.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2134" target="_blank">Codeforces Round 1045 (Div. 2) 2025-08-26</a>
+  <a href="https://codeforces.com/contest/2134" target="_blank">Codeforces 2134 Round 1045 (Div. 2) 2025-08-26</a>
 </article>
 
 
