--- a/src/components/code/code-c/c-books/pages/elem-book-c-14.html
+++ b/src/components/code/code-c/c-books/pages/elem-book-c-14.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <h1>2020 Прохоренок - Язык Си. Самое необходимое 480c</h1>
+  <h1>2020 Прохоренок - Язык Си. Самое необходимое. 480c</h1>
   <p>Конспект книги</p>
 </article>
 
