--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,6 +2,10 @@
 
 <ol reversed>
 
+  <li>2025.09.08 пн
+    <br>1. <strong>Книга</strong> <i>1991 Шилдт - Язык Си для профессионалов. 384стр</i> прочитать 1-15стр и начать книгу
+  </li>
+
   <li>2025.09.03 ср
     <br>1. <strong>Книга</strong> <i>2018 Андреева - Программирование - это так просто, программирование - это так сложно. 184стр</i> прочитать 22-27стр
     <br>1. <strong>Книга</strong> <i>2014 Зуев - Редкая профессия. 232стр</i> прочитать 1-25стр и начать книгу
