--- a/src/components/alg/alg-pract/codeforces/pages/elem-250209-Round1003.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250209-Round1003.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2065" target="_blank">Codeforces Round 1003 (Div.4) 2025-02-09</p>
+  <a href="https://codeforces.com/contest/2065" target="_blank">Codeforces 2065 Round 1003 (Div.4) 2025-02-09</p>
 </article>
 
 
