--- a/src/components/alg/alg-pract/codeforces/pages/elem-250408-Round1016.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250408-Round1016.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2093" target="_blank">Codeforces Round 1016 (Div.3) 2025-04-08</a>
+  <a href="https://codeforces.com/contest/2093" target="_blank">Codeforces 2093 Round 1016 (Div.3) 2025-04-08</a>
 </article>
 
 
