--- a/src/components/alg/alg-pract/codeforces/pages/elem-250424-Round1020.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250424-Round1020.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2106" target="_blank">Codeforces Round 1020 (Div.3) 2025-04-24</a>
+  <a href="https://codeforces.com/contest/2106" target="_blank">Codeforces 2106 Round 1020 (Div.3) 2025-04-24</a>
 </article>
 
 
