--- a/src/components/alg/alg-pract/codeforces/pages/elem-250824-Round1044.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250824-Round1044.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2133" target="_blank">Codeforces Round 1044 (Div. 2) 2025-08-24</a>
+  <a href="https://codeforces.com/contest/2133" target="_blank">Codeforces 2133 Round 1044 (Div. 2) 2025-08-24</a>
 </article>
 
 
