--- a/src/components/alg/alg-pract/codeforces/pages/elem-250828-Round1046.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250828-Round1046.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/2136" target="_blank">Codeforces Round 1046 (Div. 2) 2025-08-28</a>
+  <a href="https://codeforces.com/contest/2136" target="_blank">Codeforces 2136 Round 1046 (Div. 2) 2025-08-28</a>
 </article>
 
 
